fixed mobile navbar visibility

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -120,6 +120,10 @@
   border-bottom-color: #191919;
 }
 
+.navbar-toggle {
+  background-color:#333 !important;
+}
+
 
 .dropdown {
   position: relative;
